added read me and memoiesaztion

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css?family=Poppins"
     />
 
-    <title>Dynamics</title>
+    <title>Dynamatics</title>
   </head>
   <body>
     <div id="root"></div>
